# kfourinline

./: .flatpak-manifest.json  .gitlab-ci.yml  .kde-ci.yml  AUTHORS  CMakeLists.txt  Makefile.am  README  README.md  TODO  index.html  kfourinline.categories  kfourinline.desktop  kfourinline.lsm  kwin4.desktop  kwin4.kdelnk  kwin4.kdevprj  kwin4.lsm  kwin4ui.rc  org.kde.kfourinline.appdata.xml  org.kde.kfourinline.desktop  snapcraft.yaml
doc/: CMakeLists.txt  index.docbook
grafix/: CMakeLists.txt  Makefile.am  default.desktop  default.rc  gray_reflection.desktop  gray_reflection.rc  index.desktop  pretty.rc  yellow.desktop  yellow.rc  yellow_reflection.desktop  yellow_reflection.rc
grafix/default/: CMakeLists.txt  grafix.rc
icons/: CMakeLists.txt
kproc4/: KChildConnect.cpp  KChildConnect.h  KConnectTypes.h  KEMessage.h  KMessageEntry.h  Makefile.am  kproc4.cpp  kproc4.h  main.cpp
kwin4/: AboutDlg.kdevdlg  CMakeLists.txt  KChildConnect.cpp  KConnectEntry.cpp  KConnectEntry.h  KConnectTypes.h  KEInput.cpp  KEInput.h  KEMessage.cpp  KInputChildProcess.cpp  KInputChildProcess.h  KInteractiveConnect.cpp  KInteractiveConnect.h  KMessageEntry.cpp  KProcessConnect.cpp  KProcessConnect.h  KRSocket.cpp  KRSocket.h  KRemoteConnect.cpp  KRemoteConnect.h  Makefile.am  geom.cpp  geom.h  kEndDlg.kdevdlg  kenddlg.cpp  kenddlg.h  kenddlgdata.cpp  kspritecache.cpp  kspritecache.h  kwin4.cpp  kwin4.h  kwin4.kcfg  kwin4aboutdlg.cpp  kwin4aboutdlg.h  kwin4aboutdlgdata.cpp  kwin4doc.cpp  kwin4doc.h  kwin4player.cpp  kwin4player.h  kwin4proc.cpp  (+25 more)
kwin4/templates/: cpp_template  header_template
po/: Makefile
po/af/: kfourinline.po
po/ar/: kfourinline.po
po/ar/docs/kfourinline/: index.docbook
po/ast/: kfourinline.po
po/be/: kfourinline.po
po/bg/: kfourinline.po
po/br/: kfourinline.po
po/bs/: kfourinline.po
po/ca/: kfourinline.po
po/ca/docs/kfourinline/: index.docbook
po/ca@valencia/: kfourinline.po
po/cs/: kfourinline.po
po/cy/: kfourinline.po
po/da/: kfourinline.po
po/de/: kfourinline.po
po/de/docs/kfourinline/: index.docbook
po/el/: kfourinline.po
po/en_GB/: kfourinline.po
po/eo/: kfourinline.po
po/es/: kfourinline.po
po/es/docs/kfourinline/: index.docbook
po/et/: kfourinline.po
po/et/docs/kfourinline/: index.docbook
po/eu/: kfourinline.po
po/fa/: kfourinline.po
po/fi/: kfourinline.po
po/fr/: kfourinline.po
po/fr/docs/kfourinline/: index.docbook
po/ga/: kfourinline.po
po/gl/: kfourinline.po
po/he/: kfourinline.po
po/hi/: kfourinline.po
po/hr/: kfourinline.po
po/hu/: kfourinline.po
po/ia/: kfourinline.po
po/id/: kfourinline.po
po/is/: kfourinline.po
po/it/: kfourinline.po
po/it/docs/kfourinline/: index.docbook
po/ja/: kfourinline.po
po/ka/: kfourinline.po
po/kk/: kfourinline.po
po/km/: kfourinline.po
po/ko/: kfourinline.po
po/lt/: kfourinline.po
po/lv/: kfourinline.po
po/mai/: kfourinline.po
po/mk/: kfourinline.po
po/ml/: kfourinline.po
po/mr/: kfourinline.po
po/nb/: kfourinline.po
po/nds/: kfourinline.po
po/ne/: kfourinline.po
po/nl/: kfourinline.po
po/nl/docs/kfourinline/: index.docbook
po/nn/: kfourinline.po
po/oc/: kfourinline.po
po/pa/: kfourinline.po
po/pl/: kfourinline.po
po/pl/docs/kfourinline/: index.docbook
po/pt/: kfourinline.po
po/pt/docs/kfourinline/: index.docbook
po/pt_BR/: kfourinline.po
po/pt_BR/docs/kfourinline/: index.docbook
po/ro/: kfourinline.po
po/ru/: kfourinline.po
po/sa/: kfourinline.po
po/sk/: kfourinline.po
po/sl/: kfourinline.po
po/sl/docs/kfourinline/: index.docbook
po/sr/: kfourinline.po
po/sr@ijekavian/: kfourinline.po
po/sr@ijekavianlatin/: kfourinline.po
po/sr@latin/: kfourinline.po
po/sv/: kfourinline.po
po/sv/docs/kfourinline/: index.docbook
po/ta/: kfourinline.po
po/te/: kfourinline.po
po/tg/: kfourinline.po
po/th/: kfourinline.po
po/tr/: kfourinline.po
po/ug/: kfourinline.po
po/uk/: kfourinline.po
po/uk/docs/kfourinline/: index.docbook
po/xh/: kfourinline.po
po/zh_CN/: kfourinline.po
po/zh_TW/: kfourinline.po
src/: AboutDlg.kdevdlg  CMakeLists.txt  Messages.sh  aiboard.cpp  aiboard.h  buttonsprite.cpp  buttonsprite.h  chatdlg.cpp  chatdlg.h  config-src.h.cmake  config-src.h.in  displaygame.cpp  displaygame.h  displayintro.cpp  displayintro.h  introsprite.cpp  introsprite.h  kchatdialog.cpp  kchatdialog.h  kfontutils.cpp  kfontutils.h  kfourinline.qrc  kfourinline_debug.cpp  kfourinline_debug.h  kfourinlineui.rc  kgameconnectdialog.cpp  kgameconnectdialog.h  kgamedebugdialog.cpp  kgamedebugdialog.h  kgamedialog.cpp  kgamedialog.h  kgamedialogconfig.cpp  kgamedialogconfig.h  kgameprocess.cpp  kgameprocess.h  kgamepropertyarray.h  kwin4.cpp  kwin4.h  kwin4.kcfg  kwin4classes.fig  (+37 more)
themes/: CMakeLists.txt  default.desktop  default.rc  gray_reflection.desktop  gray_reflection.rc  yellow.desktop  yellow.rc  yellow_reflection.desktop  yellow_reflection.rc
