SUBDIRS = kwin4 grafix kproc4

####### kdevelop will overwrite this part!!! (end)############
# not a GNU package. You can remove this line, if 
# have all needed files, that a GNU package needs
AUTOMAKE_OPTIONS = foreign 

KDE_ICON = kwin4

appsdir = $(kde_appsdir)/Games
apps_DATA = kwin4.desktop
EXTRA_DIST = $(apps_DATA)


