
########### install files ###############

install( FILES
default.desktop
default.rc
default.svg
yellow.desktop
yellow.rc
yellow.svg 
gray_reflection.desktop
gray_reflection.rc
gray_reflection.svg
yellow_reflection.desktop
yellow_reflection.rc
DESTINATION ${KDE_INSTALL_DATADIR}/kfourinline/grafix)

