# Generated automatically from Makefile.in by configure.
# KDE tags expanded automatically by am_edit - $Revision$ 
# Generated automatically from Makefile.in by configure.
grafix_DATA=aboute.png arrow_yellow.png empty.png yellow.png arrow.png background.png hint.png red.png arrow_red.png board.png win4about.png
grafixdir=$(kde_datadir)/kwin4/grafix
EXTRA_DIST = $(grafix_DATA)

